TAG: qcreports_db-6-0-15-2
TAG: qcreports_db-6-0-15-1
DATE: 12/02/2019
STAFF: lec
CHANGES: TR13007/RNA Sequence project

TAG: qcreports_db-6-0-14-13
TAG: qcreports_db-6-0-14-12
DATE: 09/19/2019
STAFF: sc
CHANGES:TR13173 - new variant report for Carol
1) weekly/ALL_Variant.py 
    produces a tab-delim report and a json report
    each with slightly different info
    ALL_Variant.rpt and ALL_Variant.json.rpt

TAG: qcreports_db-6-0-14-11
TAG: qcreports_db-6-0-14-10
TAG: qcreports_db-6-0-14-9
TAG: qcreports_db-6-0-14-8
DATE: 08/23/2019
STAFF: sc
CHANGES: TR13115 Variant Reports
 weekly/ALL_VariantCheckComplement.py
 weekly/ALL_VariantSeqAssoc.py
 weekly/ALL_VariantSeqCoords.py

TAG: qcreports_db-6-0-14-7
DATE: 08/20/2019
STAFF: lec
CHANGES:
TR13161/mgd/WF_SupplementalData.py

TAG: qcreports_db-6-0-14-6
DATE: 08/19/2019
STAFF: lec
CHANGES:
TR13159/mgd/GXD_WildType.sql
add MP annot to criteria

TAG: qcreports_db-6-0-14-5
DATE: 08/09/2019
STAFF: lec
CHANGES:
mgd/GXD_FullCodeGene.sql/lower for quantitative RT -> quantitative rt

TAG: qcreports_db-6-0-14-4
DATE: 05/15/2019
STAFF: lec
CHANGES:
TR13113/WF_GXD_secondary.py/fix count

TAG: qcreports_db-6-0-14-3
DATE: 04/22/2019
STAFF: sc
CHANGES: TR13075
New report - weekly/VOC_DOOMIMMult.py
qcr.shtml - added OMIM terms that have multiple DO xrefs

TAG: qcreports_db-6-0-14-2
DATE: 04/11/2019
STAFF: lec
CHANGES: TR13081/retire DMDD/qcr.shtml

TAG: qcreports_db-6-0-14-1
DATE: 04/03/2019
STAFF: lec
CHANGES: T12963/TR12763/Lit Triage
WF_GXD_secondary.py
WF_AP_Routed.py
WF_AP_NewAlleleNomenTag.py
WF_AP_Discard.py
GXD_Stats.py
GXD_Triage.sql
GXD_References.sql
BIB_MissingPDFs.sql
WF_SupplementalData.py
WF_AP_NewAlleleNomenTag.py : obsolete
GXD_EarlyPapers : obsolete

TAG: qcreports_db-6-0-13-17
DATE: 03/25/2019
STAFF: lec
CHANGES: TR13013/GXD_Stats.py/cumulative counts for HT

TAG: qcreports_db-6-0-13-16
DATE: 03/13/2019
STAFF: sc
CHANGES: TR13050 - qcr.shtml - added link in dataloads to omim_hpload index file
