@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-15-3
+DATE: 12/30/2019
+STAFF: sc
+CHANGES: TR13205/GXD_Images.rpt
+
 TAG: qcreports_db-6-0-15-2
 TAG: qcreports_db-6-0-15-1
 DATE: 12/02/2019
